[gd_scene load_steps=4 format=3 uid="uid://crsvv5sgjvs1n"]

[ext_resource type="Script" path="res://Scoreboard.gd" id="1_ipj5g"]

[sub_resource type="LabelSettings" id="LabelSettings_smh4y"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_w61xh"]
font_size = 22

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ipj5g")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 56.0
offset_right = 1000.0
offset_bottom = 298.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_smh4y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 347.0
offset_right = 748.0
offset_bottom = 441.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 449.0
offset_right = 745.0
offset_bottom = 513.0
text = "Modify Points(Add/Sub)"
label_settings = SubResource("LabelSettings_w61xh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnUpdate" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 544.0
offset_right = 351.0
offset_bottom = 625.0
text = "Update"

[node name="btnReset" type="Button" parent="."]
layout_mode = 0
offset_left = 798.0
offset_top = 541.0
offset_right = 1127.0
offset_bottom = 622.0
text = "Reset"

[connection signal="pressed" from="btnUpdate" to="." method="_on_btn_update_pressed"]
[connection signal="pressed" from="btnReset" to="." method="_on_btn_reset_pressed"]
